tests/paczka1/fuzzy1/92889237.err
Error in line 1: S27 A488 88,8
Error in line 3: S27 S27 60,1
Error in line 2: tCas S456 86,3
Error in line 21: Wf0NVXvxf S27 31,8
